--- a/style/style.css
+++ b/style/style.css
@@ -1,41 +1,41 @@
 @import url(main.css);
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    --background-primary: #F4F5FB;
-    --background-secondary: #FFFFFF;
+:root {
+  --background-primary: #f4f5fb;
+  --background-secondary: #ffffff;
 
-    --color-brand: #ca3884;
-    --color-brand-hover: #a52c6b;
-    --color-danger: #C93847;
+  --color-brand: #ca3884;
+  --color-brand-hover: #a52c6b;
+  --color-danger: #c93847;
 
-    --content-primary: #080b12;
-    --content-secondary: #374151;
-    --content-tertiary: #9ca3af;
-    --always-white: #ffffff;
+  --content-primary: #080b12;
+  --content-secondary: #374151;
+  --content-tertiary: #9ca3af;
+  --always-white: #ffffff;
 
-    --border-primary: #d1d5db;
-    --border-hover: #b9c2d0;
+  --border-primary: #d1d5db;
+  --border-hover: #b9c2d0;
 
-    --font-primary: 'Inter', sans-serif;
-    --title: var(--font-primary) 700 2rem/1.5rem;
-    --label: var(--font-primary) 600  1.25rem/1rem;
-    --paragraph: var(--font-primary) 500  11.25rem/1rem;
-    --link: var(--font-primary) 500 1rem/.875rem;
+  --font-primary: "Inter", sans-serif;
+  --title: var(--font-primary) 700 2rem/1.5rem;
+  --label: var(--font-primary) 600 1.25rem/1rem;
+  --paragraph: var(--font-primary) 500 11.25rem/1rem;
+  --link: var(--font-primary) 500 1rem/0.875rem;
 }
 
-body{
-    background-color: var(--background-primary);
+body {
+  background-color: var(--background-primary);
 }
 
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
 }
