--- a/style/main.css
+++ b/style/main.css
@@ -6,6 +6,10 @@ main {
   align-items: flex-start;
   margin-left: 15rem;
 
+  a:hover{
+    transform: scale(1.2);
+  }
+
   h1 {
     margin-top: 1rem;
     font-family: var(--font-primary);
@@ -107,5 +111,9 @@ main {
       width: 10rem;
       height: 2.75rem;
     }
+    button:hover{
+      background-color: var(--color-brand-hover);
+      }
+
   }
 }
